Fix overflow not handled correctly (#215)

--- a/packages/frontend/src/components/Timematcher/Timematcher.module.css
+++ b/packages/frontend/src/components/Timematcher/Timematcher.module.css
@@ -53,3 +53,35 @@
 .bothAvailable {
   background-color: var(--flocker-color-tertiary);
 }
+
+h3 {
+  font-size: var(--flocker-font-size-small);
+  font-weight: var(--flocker-font-weight-light);
+  margin: 0 1em 0 0.5em;
+}
+
+.legend {
+  margin-top: 1em;
+  display: flex;
+  align-items: center;
+}
+
+.legend .circleAvailability {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: var(--flocker-circle-availability-color);
+  opacity: 70%;
+  border-radius: 50%;
+}
+
+.legend .circleBothAvailable {
+  background-color: var(--flocker-color-tertiary);
+}
+
+.legend .circleUserAvailable {
+  background-color: var(--flocker-color-secondary);
+}
+
+.legend .circleFlockAvailable {
+  background-color: var(--flocker-color-primary);
+}
